@@ -1,4 +1,4 @@
-Copyright (c) 2004 Craig Franklin
+Copyright (c) 2004, 2005 Craig Franklin
 
 This file is part of gputils.
 
